--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,9 @@ test-timeout = 300
 name = "should_panic"
 harness = false
 
+[[test]]
+name = "stack_overflow"
+harness = false
+
 [profile.release]
 panic = "abort"
